name: testing, beats: 12, bpm: 128, selected:[[False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False]], drumkit:kit3