@@ -1,1 +1,3 @@
-name: testing, beats: 12, bpm: 128, selected:[[False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, True, False, False, False, False, False, False]], drumkit:kit3
+name: blank, beats: 8, bpm: 128, selected:[[False, False, False, False, False, False], [False, False, False, False, False, False], [False, False, False, False, False, False], [False, False, False, False, False, False], [False, False, False, False, False, False], [False, False, False, False, False, False], [False, False, False, False, False, False], [False, False, False, False, False, False]], drumkit:kit1
+name: basic, beats: 8, bpm: 128, selected:[[False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, False, False, False], [False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, False, False, False]], drumkit:kit3
+name: 3, beats: 8, bpm: 128, selected:[[False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, True, False, False], [False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, True, False, False], [False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, True, False, False], [False, True, False, False, False, True, False, False, False], [False, True, False, False, False, False, True, False, False]], drumkit:kit3
